Updated composer.json to accept dev version packages

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
             "email": "samy@namani.net"
         }
     ],
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "PHP": ">=5.3",
         "sntools/core": "*"
