Improved flag type Added operator overriding operations Fixed license Updated documentation

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["type", "class", "autoboxing"],
     "authors": [
         {
-            "name": "Samy NAAMANI",
+            "name": "Samy Naamani",
             "email": "samy@namani.net"
         }
     ],
