Updated composer.json for PHP 5.3 targeting

--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,10 @@
         "psr-4": {
             "SNTools\\Types\\Tests\\": "tests/"
         }
+    },
+    "config": {
+        "platform": {
+            "php": "5.3"
+        }
     }
 }
